added teacher details too in my website
and also i have modified the old code as well, just a little bit, i have added just  2 links to the navbar

--- a/styles.css
+++ b/styles.css
@@ -44,7 +44,7 @@ body {
 .two{
     display: flex;
     flex-direction: row;
-    align-items: center;
+    /* align-items: center; */
 }
 .one h2{
     color: black;
